force-app/main/default/objects/Test_Execution_Cycle__c/Test_Execution_Cycle__c.object-meta.xml
<CustomObject>
    <label>Test Execution Cycle</label>
    <nameField>
        <label>Execution Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Execution Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>