force-app/main/default/objects/Test_Execution_Cycle__c/fields/Execution_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Execution_End_Date__c</fullName>
    <label>Execution End Date</label>
    <type>Date</type>
</CustomField>