force-app/main/default/objects/Test_Execution_Cycle__c/fields/No_of_Passed_Script_Executions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Passed_Script_Executions__c</fullName>
    <label>No.of Passed Script Executions</label>
    <summaryFilterItems>
        <field>Test_Execution__c.Status__c</field>
        <operation>equals</operation>
        <value>Passed</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Execution__c.Execution_Cycle_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>