force-app/main/default/objects/Test_Execution_Cycle__c/fields/No_of_Script_Executions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Script_Executions__c</fullName>
    <label>No.of Script Executions</label>
    <summaryForeignKey>Test_Execution__c.Execution_Cycle_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>