force-app/main/default/objects/Test_Execution_Cycle__c/fields/Release_Name__c.field-meta.xml
<CustomField>
    <fullName>Release_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Name</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Test Execution Cycles</relationshipLabel>
    <relationshipName>Test_Execution_Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>